--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimary">?colorPrimary</color>
     <color name="colorPrimaryDark">?colorPrimaryDark</color>
     <color name="colorAccent">?colorAccent</color>
+    <color name="colorRed">#FFFF0000</color>
+    <color name="colorWhite">#FFFFFFFF</color>
+    <color name="colorBlack">#FF000000</color>
+    <color name="colorBlue">#FF0000FF</color>
 </resources>
